jdk 17 fallback code